@@ -7,6 +7,13 @@ Sources
 
 Releases
 {
+  v8r8-pre10
+  {
+    Modules = LHCbDIRAC:v8r8-pre10, LHCbWebDIRAC:v4r3p2
+    Depends = DIRAC:v6r17p21
+    LcgVer = 2017-05-23
+  }
+
   v0r8809
   {
     Modules = LHCbDIRAC:v0r8809, LHCbWebDIRAC:v4r3p2
